--- a/style.css
+++ b/style.css
@@ -3,14 +3,21 @@
   font-family: "Nunito", sans-serif;
   text-decoration: none;
 }
+
 body {
-  background-color: rgb(223, 218, 218);
+  background: linear-gradient(0deg, #1f1f1f 0%, #414141 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.header-text {
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+  padding: 20px;
+  color: #FFFFFF;
 }
 #container {
-  position: relative;
 	top: 30px;
-	
-  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 	font-size: 0;
 	margin:auto;
 	height:660px;
@@ -27,6 +34,7 @@ body {
 	display:inline-block;
   height: 60px;
   width: 60px;
+  background-color: #FFFFFF;
 }
  #grid:hover { 
   /* background-color: black; */
@@ -67,21 +75,202 @@ body {
     outline: 0;
   }
   .footer {
-  background-color: rgb(41, 43, 44);
+  background-color: rgb(192,192,192);
   width: 100%;
   position: fixed;
   bottom: 0;
-  padding: 20px;
+  padding: 30px;
   left: 0;
   text-align: center;
-  color: #FFFFFF
+  color: #000000;
+  font-size: 15px;
+  font-weight: bold;
   }
   .githublogo {
     text-decoration: none;
   }
   a {
-    color: white;
+    color: rgb(0, 0, 0);
   }
+  .grid-border {
+    border: 30px solid rgb(192,192,192);
+    /* border-radius: 8px; */
+	  height:660px;
+	  width:660px;
+    align-self: center;
+    display: flex;
+  }
+  .items {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+.button-hub {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  background: rgb(192,192,192);
+  padding: 20px;
+  height: 680px;
+}
+button {
+  cursor: pointer;
+}
+.button-57 {
+  position: relative;
+  overflow: hidden;
+  border: none;
+  color: #18181a;
+  display: inline-block;
+  font-size: 35px;
+  line-height: 15px;
+  padding: 18px 18px 17px;
+  margin: 7px;
+  text-decoration: none;
+  cursor: pointer;
+  background: #fff;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  border-radius: 8px;
+}
+
+
+.button-57 span:first-child {
+  position: relative;
+  transition: color 600ms cubic-bezier(0.48, 0, 0.12, 1);
+  z-index: 10;
+}
+
+.button-57 span:last-child {
+  color: white;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  transition: all 500ms cubic-bezier(0.48, 0, 0.12, 1);
+  z-index: 100;
+  opacity: 0;
+  top: 50%;
+  left: 50%;
+  transform: translateY(225%) translateX(-50%);
+  height: 14px;
+  line-height: 13px;
+}
+
+.button-57:after {
+  content: "";
+  position: absolute;
+  bottom: -50%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: black; */
+  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+  transform-origin: bottom center;
+  transition: transform 600ms cubic-bezier(0.48, 0, 0.12, 1);
+  transform: skewY(9.3deg) scaleY(0);
+  z-index: 50;
+}
+
+.button-57:hover:after {
+  transform-origin: bottom center;
+  transform: skewY(9.3deg) scaleY(2);
+}
+
+.button-57:hover span:last-child {
+  transform: translateX(-50%) translateY(-100%);
+  opacity: 1;
+  transition: all 900ms cubic-bezier(0.48, 0, 0.12, 1);
+}
+#colorpicker {
+  cursor: pointer;
+}
+.range-slider {
+  max-width: 30em;
+  margin-top: 30px;
+  position: relative;
+  display: flex;
+}
+.range-slider .slider{
+  -webkit-appearance: none;
+  width: 100%;
+  height: 0.4em;
+  outline: none;
+  border-radius: 3px;
+}
+.range-slider .slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 1.7em;
+  height: 1.7em;
+  z-index: 3;
+  position: relative;
+}
+.range-slider .slider-thumb {
+  position: absolute;
+  width: 1.2em;
+  height: 1.2em;
+  background: rgb(0, 0, 0);
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  box-shadow: inset 0px 1px 2px #909090;
+  cursor: pointer;
+}
+.range-slider .slider-thumb::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0.7em;
+  height: 0.7em;
+  background: #333;
+  border-radius: inherit;
+  transition: 0.3s;
+}
+.range-slider:hover .slider-thumb::before {
+  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+}
+.range-slider .tooltip {
+  position: absolute;
+  width: 3.1em;
+  height: 2em;
+  top: -2em;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #090909;
+  text-align: center;
+  line-height: 35px;
+  color: #fff;
+  border-radius: 3px;
+}
+.range-slider .tooltip::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 10px solid #090909;
+  bottom: -0.5em;
+  left: 50%;
+  transform: translate(-50%);
+}
+.range-slider .progress {
+  width: 50%;
+  height: 0.4em;
+  border-radius: 3px;
+  background: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  pointer-events: none;
+}
+
+
 
   
   /* @media (min-width: 768px) { */
